# lambda-normaliser

./: README.md  lambda-normaliser.cabal  normaliser.cabal  package.yaml  stack.yaml
src/: Eval.hs  Main.hs  Terms.hs  Util.hs  Values.hs  Weaken.hs
