cabal-version:      2.4
name:               normaliser
version:            0.1.0.0


executable normaliser
    main-is:          Main.hs

    other-modules:
        Terms,
        Values,
        Eval,
        Weaken,
        Util

    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
    extensions:
        GADTs,
        DataKinds,
        KindSignatures
